...
                    iosList
                        .navigationBarTitle(Text(Strings.discoverFeatures), displayMode: .inline)
                        .navigationBarItems(trailing:
                            Button(action: { presentationMode.wrappedValue.dismiss() }) {
                                Text(Strings.done).fontWeight(.semibold)
                            }
                            .accessibilityIdentifier("discoverDone")
                        )
                }
                .navigationViewStyle(StackNavigationViewStyle())
            }
        }
        .onAppear { FeatureDiscovery.hasSeen = true }
...
