...
                        }
                    }) {
                        Text(Strings.done)
                            .foregroundColor(Color(.lightText))
                            .font(Font.body.weight(.bold))
                    }
                    .accessibilityIdentifier("settingsDoneButton")
                }
                .padding()
                .padding([.leading, .trailing, .bottom])
                .frame(width: g.size.width)
                .padding([.top])
                .transition(.opacity)
...
